Updates for todos route example w/out annotation

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 # index:
 #    path: /
 #    controller: App\Controller\ArticleController::index
+
+# index:
+#    path: /todos/
+#    controller: App\Controller\ToDoController::index
