Updates routes to symfony syntax

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,5 +3,5 @@
 #    controller: App\Controller\ArticleController::index
 
 # index:
-#    path: /todos/
+#    path: /todo/
 #    controller: App\Controller\ToDoController::index
